--- a/Projet-phpsql-main/index.html
+++ b/Projet-phpsql-main/index.html
@@ -69,7 +69,7 @@
                     <div class="about-item">
                         <div class="abt-text">
                             <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                            <p class="small-text">heures de travail <br /></p>
                         </div>
                     </div>
                     <div class="about-item">
@@ -93,7 +93,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Communication</p>
+                        <p class="prog-title">Plan de communication</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Python</p>
+                        <p class="prog-title">E-Commerce</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <h4 class="stat-title">Scolarité</h4>
+            <h4 class="stat-title">Parcours</h4>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="tl-icon">
@@ -312,85 +312,7 @@
             </div>
         </section>
         <section class="container" id="blogs">
-            <div class="blogs-content">
-                <div class="main-title">
-                    <h2>Mes <span>Blogs</span><span class="bg-text">Mes Blogs</span></h2>
-                </div>
-                <div class="blogs">
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Create Your Own Website
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                How to Become an Expert in Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Become a Web Designer in 10 Days
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Debbuging made easy with Web Inspector
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port6.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                Get started with Web Design and UI Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                    <div class="blog">
-                        <img src="img/port3.jpg" alt="">
-                        <div class="blog-text">
-                            <h4>
-                                This is what you need to know about Web Design
-                            </h4>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                                Doloribus natus voluptas, eos obcaecati recusandae amet?
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
         <section class="container contact" id="contact">
             <div class="contact-container">
@@ -501,9 +423,6 @@
         </div>
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
-        </div>
-        <div class="control" data-id="blogs">
-            <i class="far fa-newspaper"></i>
         </div>
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
