--- a/Projet-phpsql-main/index.html
+++ b/Projet-phpsql-main/index.html
@@ -74,8 +74,8 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
+                            <p class="large-text">25+</p>
+                            <p class="small-text">Intervenants <br /> satisfaits</p>
                         </div>
                     </div>
                 </div>
@@ -403,8 +403,7 @@
                             </div>
                             <div class="submit-btn">
                                 <a href="#" class="main-btn">
-                                    <span class="btn-text">Télécharger mon CV</span>
-                                    <span class="btn-icon"><i class="fas fa-download"></i></span>
+                                    <span class="btn-text">Envoyer</span>
                                 </a>
                             </div>
                         </form>
